@@ -156,6 +156,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(mousequery mousequery.cpp)
     DFHACK_PLUGIN(autotrade autotrade.cpp)
     DFHACK_PLUGIN(stocks stocks.cpp)
+    DFHACK_PLUGIN(treefarm treefarm.cpp)
 endif()
 
 
