@@ -3,6 +3,7 @@ DFHack future
   New commands:
     - restrictliquid - Restrict traffic on every visible square with liquid.
     - restrictice - Restrict traffic on squares above visible ice.
+    - treefarm - automatically chop trees and dig obsidian
   New scripts:
     - masspit: designate caged creatures in a zone for pitting
     - locate_ore: scan the map for unmined ore veins
